3rd attempt at ci

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,8 @@ jobs:
               run: | 
                 make -j$(nproc)
                 echo "SHORT_SHA=`git rev-parse --short HEAD`" >> $GITHUB_ENV
-                mv build/icesid.bin build/icesid-${SHORT_SHA}.bin
+                echo "DATE=`date + '%Y%m%d'`" >> $GITHUB_ENV
+                mv build/icesid.bin build/icesid-${{ env.DATE }}-${{ env.SHORT_SHA }}.bin
 
             - name: Build artifact upload
               uses: actions/upload-artifact@v2
@@ -40,8 +41,8 @@ jobs:
             - name: Release (as draft)
               uses: softprops/action-gh-release@v1
               with:
-                name: Release ${{ env.TAG }}
-                tag_name: ${{ env.TAG }}
+                name: Release ${{env.DATE}} ${{ env.SHORT_SHA }}
+                tag_name: ${{env.DATE}}-${{ env.SHORT_SHA }}
                 draft: true
                 files: |
                   build/icesid-*.bin
