--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,17 @@ jobs:
                 #tar -xf xpack-riscv-none-embed-gcc-10.1.0-1.1-linux-x64.tar.gz
                 #rm xpack-riscv-none-embed-gcc-10.1.0-1.1-linux-x64.tar.gz
                 #echo "$(pwd)/xpack-riscv-none-embed-gcc-10.1.0-1.1/bin" >> $GITHUB_PATH
+            
+            - name: Set Env Vars
+              run: |
+                echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+                echo "DATE=$(date + '%Y%m%d')" >> $GITHUB_ENV
+                echo ${{ env.SHORT_SHA }}
+                echo ${{ env.DATE }}
 
             - name: Run gateware build
               run: | 
                 make -j$(nproc)
-                echo "SHORT_SHA=`git rev-parse --short HEAD`" >> $GITHUB_ENV
-                echo "DATE=`date + '%Y%m%d'`" >> $GITHUB_ENV
                 mv "build/icesid.bin" "build/icesid-${{ env.DATE }}-${{ env.SHORT_SHA }}.bin"
 
             - name: Build artifact upload
