--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: release
 on:
     push:
         branches: [ $default-branch ]
-    #workflow_dispatch:
+    workflow_dispatch:
 
 jobs:
     build:
